<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:padding="10dp">


    <ImageView
        android:id="@+id/post_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"
        android:contentDescription="@string/photo"
        android:scaleType="centerCrop"
        android:src="@drawable/gh">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!--        Status-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:layout_marginRight="@dimen/text_gap"
                android:layout_marginEnd="@dimen/text_gap">
            </TextView>

            <TextView
                android:id="@+id/post_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>


        <!--        Date-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginRight="@dimen/text_gap"
                android:layout_marginEnd="@dimen/text_gap">
            </TextView>

            <TextView
                android:id="@+id/post_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <!--        Time-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginRight="@dimen/text_gap"
                android:layout_marginEnd="@dimen/text_gap">
            </TextView>

            <TextView
                android:id="@+id/post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <!--        Location-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginRight="@dimen/text_gap"
                android:layout_marginEnd="@dimen/text_gap">
            </TextView>

            <TextView
                android:id="@+id/post_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

        <!--        Description-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginRight="@dimen/text_gap"
                android:layout_marginEnd="@dimen/text_gap">
            </TextView>

            <TextView
                android:id="@+id/post_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>